# Synapse

./: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
synapse/: CMakeLists.txt
synapse/include/synapse/: activation.h  graph.h  mem.h  tensor.h
synapse/include/synapse/layers/: base_layer.h  dense.h  softmax.h
synapse/src/: activation.cpp  graph.cpp  tensor.cpp
synapse/src/layers/: base_layer.cpp  dense.cpp  softmax.cpp
